# mailwoman

./: .dockerignore  .gitignore  .prettierignore  .release-it.json  .yarnrc.yml  2026-05-25-NIGHT-SHIFT-LOG.md  2026-06-13-FORWARD-SCHEDULE.md  2026-06-13-GEOCODER-CAMPAIGN.md  2026-06-13-NIGHT-SHIFT-PLAN-SUPPLEMENTAL.md  2026-06-13-SESSION-HANDOFF-TO-CLAUDE.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  HANDOFF-2026-06-25.md  LICENSE.md  LOG.md  README.md  RELEASING.md  REPRODUCIBILITY.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TODO.md  UNFUCK_SCRIPTS.md  cliArguments.code-search  cliarg.code-search  eslint.config.mjs  index.ts  oxfmt.config.ts  oxlint.config.ts  package.json  process_argv.code-search  process_env.code-search  release.config.json  tsconfig.json  vitest.config.ts
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
.well-known/: funding-manifest-urls
address-id/: README.md  index.test.ts  index.ts  package.json  tsconfig.json
annotations/: README.md  index.test.ts  index.ts  package.json
api/: README.md  app.ts  engine.ts  index.test.ts  index.ts  package.json  routes.ts  schema.ts  tsconfig.json
api-kit/: README.md  error.ts  geo.test.ts  geo.ts  index.test.ts  index.ts  metrics.test.ts  metrics.ts  openapi.ts  package.json  serve.ts  tsconfig.json
ban/: README.md  index.ts  package.json  tsconfig.json
build-logs/: v150-regate-runbook.sh
corpus-python/: README.md  pyproject.toml
corpus-python/modal/: AGENTS.md  train_remote.py
corpus-python/scripts/: audit_config_keys.py  diagnose_regression.py  eval_seg_at_1.py  generate_deepseek_corpus.py  ship_v0_2_0.sh  ship_v0_3_0.sh  ship_v0_4_0.sh  train_tokenizer.py  train_with_resume.sh  train_with_resume.ts  verify_toolchain.py
corpus-python/src/mailwoman_train/: __init__.py  __main__.py  augment.py  build_fragment_shard.py  build_secondary_shard.py  char_tokenizer.py  cli.py  config.py  conventions.py  country_lexicon.py  crf.py  data_loader.py  eval.py  export_onnx.py  fit_crf_transitions.py  gazetteer_anchor.py  labels.py  masking.py  model.py  package_weights.py  phrase_priors.py  postcode_shapes.py  pretrain.py  quantize.py  relabel.py  span_scorer.py  test_anchor_alignment.py  test_anchor_channel.py  test_anchor_shaped.py  test_augment.py  test_conventions.py  test_country_lexicon.py  test_data_loader_spans.py  test_gazetteer_anchor.py  test_metrics.py  test_relabel.py  test_secondary_shard.py  test_shard_paths.py  test_span_labels.py  test_span_parquet.py  (+6 more)
corpus-python/src/mailwoman_train/configs/: stage1-coarse.yaml  stage1-smoke.yaml  stage2.yaml  v0.9.0-pilot-selfcond.yaml  v0.9.1-pilot-anchor-off.yaml  v0.9.1-pilot-anchor-on.yaml  v0.9.10-country-bal.yaml  v0.9.11-country-cw.yaml  v0.9.12-country-gaz.yaml  v0.9.13-country-gaz-curric.yaml  v0.9.14-affix-ml.yaml  v0.9.2-de-bothorder.yaml  v0.9.3-de-regiontail.yaml  v0.9.4-de-dualanchor.yaml  v0.9.5-unit.yaml  v0.9.6-unit-v2.yaml  v0.9.7-unit-v3.yaml  v0.9.8-affix.yaml  v0.9.9-country-v2.yaml  v0.9.9-country-v3.yaml  v0.9.9-country.yaml  v0_4_0-ablate-crf.yaml  v0_4_0-ablate-cw.yaml  v0_4_0-final.yaml  v0_4_0-lr1.5e4.yaml  v0_4_0-lr3e4.yaml  v0_4_0-smoke.yaml  v0_4_0-stableLR-crf-only.yaml  v0_4_0-stableLR-cw-only.yaml  v0_4_0-stableLR-source-only.yaml  v0_4_0.yaml  v0_5_0-classifier-ce-only-full.yaml  v0_5_0-classifier-ce-only-smoke.yaml  v0_5_0-classifier-smoke.yaml  v0_5_1-classifier-unchained.yaml  v0_5_2-classifier-rebalanced.yaml  v0_5_3-classifier-diagnostic.yaml  v0_5_4-revert-recipe.yaml  v0_6_0-stage3.yaml  v0_6_1-stage3-streets.yaml  (+114 more)
corpus-python/src/mailwoman_train/data/: country-surfaces.json
corpus-python/tests/mailwoman_train/: test_config_strict.py  test_country_weights_norway.py  test_crf.py  test_crt_probe_lever.py  test_labels.py  test_mlm_pretrain.py  test_package_weights.py  test_pr3_self_conditioning.py  test_resume_lr_restamp.py  test_resurrection.py  test_span_export.py  test_span_scorer.py  test_tokenizer_alignment.py  test_tokenizer_splice_gate.py  test_tokenizer_train.py  test_v0_5_0_forward_pass.py
(+3807 files in other folders)
