[project]
name = "mailwoman-corpus-python"
version = "0.1.0"
description = "Python helpers for the Mailwoman corpus pipeline (SentencePiece tokenizer training + Phase 2 training)."
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
authors = [{ name = "Sister Software", email = "contact@sister.software" }]
dependencies = [
	# Pin loose; install via `pip install -e .` from this directory.
	# PyArrow was dropped in Phase 1.5 (#18 §4) when corpus build moved to JS-native Parquet
	# via @dsnp/parquetjs, then re-added in Phase 2 (issue #10) for the training data loader.
	"sentencepiece>=0.2.0",
	"pyarrow>=15",
	"pyyaml>=6",
	"numpy>=1.26,<3",
]

# Heavy ML deps live under [train] so plain tokenizer-training and corpus utilities
# can install without dragging PyTorch / Transformers / ONNX onto every machine.
[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff==0.15.20"]
train = [
	# Pinned to the exact export/quant toolchain that produced the v4.1.0 ONNX artifact
	# (2026-06-09). Unpinned `>=` drifted (transformers→5.x, onnx→1.21) and broke int8
	# quant; these match scripts/modal/train_remote.py's image so a local export/quant
	# produces the same browser-shipped graph. See that file's pin comment for the
	# mobile-Safari (onnxruntime-web native WebGPU EP) invariant before bumping.
	"torch==2.12.0",
	"transformers==5.9.0",
	"datasets>=2.19",
	"onnx==1.21.0",
	"onnxruntime==1.26.0",
	"tqdm>=4.66",
	# Optional experiment tracking. Logging is best-effort and guarded at runtime
	# (see mailwoman_train/trackio_logging.py) so its absence never breaks a train run.
	"trackio",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Ruff — the Python analog of the repo's oxlint + oxfmt setup (lint + format in one fast tool).
[tool.ruff]
# Mirror the JS house style: 120-column width (double quotes are Ruff's default).
line-length = 120
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# Ruff's defaults (pyflakes `F` + pycodestyle `E`) plus import sorting (`I`), pyupgrade
# (`UP`), and bugbear (`B`). Line length is enforced by the formatter, so the linter's
# `E501` is disabled to avoid double-reporting long lines it can't wrap (URLs, etc.).
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
# Format code blocks inside docstrings too (this package is docstring-heavy).
docstring-code-format = true
